objects/AW_Occupation__c.object
<CustomObject>
    <description>A lookup table for allowed occupations. This is used to select occupations on leads and accounts as well as containing the code to use when synchronising occupations to external systems.</description>
    <fields>
        <fullName>AW_OccupationCode__c</fullName>
        <description>Unique Occupation External ID</description>
        <externalId>true</externalId>
        <label>Occupation Code</label>
        <length>10</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>AW_OccupationalDuty_Admin__c</fullName>
        <defaultValue>0</defaultValue>
        <description>This describes the responsibilities for admin users</description>
        <label>Occupational Duty</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>AW_Status__c</fullName>
        <description>Indicates the status of the occupation in BPO.</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Occupation</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>AW_OccupationCode__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Occupation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Occupations</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>